# google_keep_mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker.yml
scripts/: get_master_token.py
src/google_keep_mcp/: server.py
