[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google-keep-mcp"
version = "0.1.0"
description = "MCP server for Google Keep via gkeepapi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.5,<3.0.0",
    "gkeepapi>=0.17.1",
    "python-dotenv>=1.1.0",
]

[project.scripts]
google-keep-mcp = "google_keep_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
